updating the node2

--- a/blockchain-node2.py.ipynb
+++ b/blockchain-node2.py.ipynb
@@ -9,23 +9,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting Flask\n",
-      "  Downloading https://files.pythonhosted.org/packages/7f/e7/08578774ed4536d3242b14dacb4696386634607af824ea997202cd0edb4b/Flask-1.0.2-py2.py3-none-any.whl (91kB)\n",
+      "Requirement already satisfied: Flask in /home/scott/py3/lib/python3.6/site-packages (1.0.2)\n",
       "Requirement already satisfied: requests in /home/scott/py3/lib/python3.6/site-packages (2.20.1)\n",
-      "Collecting click>=5.1 (from Flask)\n",
-      "  Downloading https://files.pythonhosted.org/packages/fa/37/45185cb5abbc30d7257104c434fe0b07e5a195a6847506c074527aa599ec/Click-7.0-py2.py3-none-any.whl (81kB)\n",
-      "Collecting itsdangerous>=0.24 (from Flask)\n",
-      "  Downloading https://files.pythonhosted.org/packages/76/ae/44b03b253d6fade317f32c24d100b3b35c2239807046a4c953c7b89fa49e/itsdangerous-1.1.0-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: click>=5.1 in /home/scott/py3/lib/python3.6/site-packages (from Flask) (7.0)\n",
       "Requirement already satisfied: Jinja2>=2.10 in /home/scott/py3/lib/python3.6/site-packages (from Flask) (2.10)\n",
-      "Collecting Werkzeug>=0.14 (from Flask)\n",
-      "  Using cached https://files.pythonhosted.org/packages/20/c4/12e3e56473e52375aa29c4764e70d1b8f3efa6682bef8d0aae04fe335243/Werkzeug-0.14.1-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: idna<2.8,>=2.5 in /home/scott/py3/lib/python3.6/site-packages (from requests) (2.7)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/scott/py3/lib/python3.6/site-packages (from requests) (1.24.1)\n",
+      "Requirement already satisfied: Werkzeug>=0.14 in /home/scott/py3/lib/python3.6/site-packages (from Flask) (0.14.1)\n",
+      "Requirement already satisfied: itsdangerous>=0.24 in /home/scott/py3/lib/python3.6/site-packages (from Flask) (1.1.0)\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/scott/py3/lib/python3.6/site-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.8,>=2.5 in /home/scott/py3/lib/python3.6/site-packages (from requests) (2.7)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/scott/py3/lib/python3.6/site-packages (from requests) (2018.11.29)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /home/scott/py3/lib/python3.6/site-packages (from Jinja2>=2.10->Flask) (1.1.0)\n",
-      "Installing collected packages: click, itsdangerous, Werkzeug, Flask\n",
-      "Successfully installed Flask-1.0.2 Werkzeug-0.14.1 click-7.0 itsdangerous-1.1.0\n"
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/scott/py3/lib/python3.6/site-packages (from requests) (1.24.1)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /home/scott/py3/lib/python3.6/site-packages (from Jinja2>=2.10->Flask) (1.1.0)\n"
      ]
     }
    ],
@@ -45,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,9 +277,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [01/Dec/2018 11:49:22] \"GET /chain HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [01/Dec/2018 11:50:43] \"GET /chain HTTP/1.1\" 200 -\n"
+      " * Running on http://0.0.0.0:5001/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [01/Dec/2018 11:52:01] \"GET /chain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [01/Dec/2018 11:52:02] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
      ]
     }
    ],
